--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -131,7 +131,7 @@
                         </li>
                     </ul>
                 </li>
-                <li id="add_data_list">
+                <li id="add_data_list" hidden>
                     <a href="add_data.html" class="active">
                         <span class="title" >Add Data</span>
                     </a>
@@ -165,8 +165,6 @@
                     <select class="form-control select" id="data-type-select"
                             data-placeholder="Choose data type.." tabindex="1">
                         <option></option>
-                        <option value="airport">Airport</option>
-                        <option value="port">Port</option>
                         <option value="city">City</option>
                         <option id="vessel-option" value="vessel" style="display: none">Vessel</option>
                     </select>
