--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -130,7 +130,7 @@
                         </li>
                     </ul>
                 </li>
-                <li id="add_data_list">
+                <li id="add_data_list" hidden>
                     <a href="add_data.html">
                         <span class="title">Add Data</span>
                     </a>
