--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -98,55 +98,21 @@
                                     <option value="Road">Road</option>
                                     <option value="Sea">Sea</option>
                                 </select>
-                                <a href="add_data.html"><i class="fa fa-plus-square"></i></a>
+                                <a id="add-city-btn" href="#"><i class="fa fa-plus-square"></i></a>
+
                             </div>
                         </div>
-                        <div class="col-sm-4" style="display: none" id="ex-select-port-div">
-                            <div class="form-group">
-                                <label> Ex Port*</label>
-                                <select class="form-control select" id="ex-select-port"
-                                        data-placeholder="Choose port..."
-                                        tabindex="1">
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-sm-4" style="display: none" id="to-select-port-div">
-                            <div class="form-group">
-                                <label> To Port*</label>
-                                <select class="form-control select" id="to-select-port"
-                                        data-placeholder="Choose port..."
-                                        tabindex="1">
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-sm-4" style="display: none" id="ex-select-airport-div">
-                            <div class="form-group">
-                                <label> Ex Airport*</label>
-                                <select class="form-control select" id="ex-select-airport"
-                                        data-placeholder="Choose airport..."
-                                        tabindex="1">
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-sm-4" style="display: none" id="to-select-airport-div">
-                            <div class="form-group">
-                                <label> To Airport*</label>
-                                <select class="form-control select" id="to-select-airport"
-                                        data-placeholder="Choose airport..."
-                                        tabindex="1">
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-sm-4" style="display: none" id="ex-input-div">
+                        <div class="col-sm-4" id="ex-input-div">
                             <div class="form-group">
                                 <label> Ex*</label>
                                 <select class="form-control select" id="ex-input"
                                         data-placeholder="Choose city..."
                                         tabindex="1">
                                 </select>
+                                <a id="refresh-city-btn" href="#"><i class="fa fa-refresh"></i></a>
                             </div>
                         </div>
-                        <div class="col-sm-4" style="display: none" id="to-input-div">
+                        <div class="col-sm-4" id="to-input-div">
                             <div class="form-group">
                                 <label> To*</label>
                                 <select class="form-control select" id="to-input"
@@ -171,7 +137,7 @@
                         <div class="col-sm-4">
                             <div class="form-group">
                                 <label> Product*</label>
-                                <select class="form-control select" id="product-select"
+                                <select class="form-control select" id="product-select" multiple
                                         data-placeholder="Choose a product..." tabindex="1">
 
                                 </select>
@@ -180,44 +146,12 @@
                         <div class="col-sm-4">
                             <div class="form-group">
                                 <label> Vessel*</label>
-                                <select class="form-control select" id="vessel-select"
+                                <select class="form-control select" id="vessel-select" multiple
                                         data-placeholder="Choose a vessel..." tabindex="1">
                                 </select>
                             </div>
                         </div>
 
-                    </div>
-
-                    <div class="row">
-                        <div class="form-group col-sm-4">
-                            <label>Deadline*</label>
-                            <div class="input-group">
-                                <span class="input-group-addon text-dark"><i
-                                        class="ion-ios-calendar-outline"></i></span>
-                                <input class="single-date-picker form-control" type="text" placeholder="Select deadline"
-                                       id="deadline_date">
-                            </div>
-                        </div>
-                        <div class="form-group col-sm-4">
-                            <label>Cut-off date*</label>
-                            <div class="input-group">
-                                <span class="input-group-addon text-dark"><i
-                                        class="ion-ios-calendar-outline"></i></span>
-                                <input class="single-date-picker form-control" type="text"
-                                       placeholder="Select cut-off date" id="cutoff_date">
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="form-group">
-                                <label> Schedule*</label>
-                                <select class="form-control select" id="scheldure_select"
-                                        data-placeholder="Choose Schedule..." tabindex="1">
-                                    <option></option>
-                                    <option value="Urgent">Urgent</option>
-                                    <option value="Routine">Routine</option>
-                                </select>
-                            </div>
-                        </div>
                     </div>
 
                     <div class="row">
@@ -233,12 +167,16 @@
                                 <input type="number" class="form-control" placeholder="Type estimate cost (€)..." id="estimate_cost">
                             </div>
                         </div>
-                        <div class="col-sm-4">
-                            <div class="form-group">
-                                <label> Carrier</label>
-                                <input class="form-control" placeholder="Type carrier data..." id="carrier">
+                        <div class="form-group col-sm-4">
+                            <label>Deadline*</label>
+                            <div class="input-group">
+                                <span class="input-group-addon text-dark"><i
+                                        class="ion-ios-calendar-outline"></i></span>
+                                <input class="single-date-picker form-control" type="text" placeholder="Select deadline"
+                                       id="deadline_date">
                             </div>
                         </div>
+
                     </div>
                     <div class="row">
 
@@ -435,7 +373,7 @@
                         </li>
                     </ul>
                 </li>
-                <li id="add_data_list">
+                <li id="add_data_list" hidden>
                     <a href="add_data.html">
                         <span class="title" >Add Data</span>
                     </a>
