--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -31,9 +31,8 @@
     <link rel="stylesheet" href="../assets/icons/metrize/metrize.css">
     <link rel="stylesheet" href="../assets/icons/typicons/typicons.min.css">
     <link rel="stylesheet" href="../assets/icons/weathericons/css/weather-icons.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.7/css/fixedHeader.dataTables.min.css">
-
-
+    <link rel="stylesheet" type="text/css"
+          href="https://cdn.datatables.net/fixedheader/3.1.7/css/fixedHeader.dataTables.min.css">
 
 
     <!--Date-range-->
@@ -58,7 +57,6 @@
             font-weight: bold;
 
         }
-
 
         .dataTables_filter,
         .dataTables_info {
@@ -164,10 +162,30 @@
                         <div class="col-sm-4">
                             <div class="form-group">
                                 <label> Estimate cost (€)*</label>
-                                <input type="number" class="form-control" placeholder="Type estimate cost (€)..." id="estimate_cost">
+                                <input type="number" class="form-control" placeholder="Type estimate cost (€)..."
+                                       id="estimate_cost">
                             </div>
                         </div>
-                        <div class="form-group col-sm-4">
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <label> KG*</label>
+                                <input type="number" class="form-control" placeholder="Type Kilos..." id="kg">
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="row">
+
+
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label> Reference*</label>
+                                <input class="form-control" placeholder="Type reference number..." id="reference"
+                                       type="text">
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-6">
                             <label>Deadline*</label>
                             <div class="input-group">
                                 <span class="input-group-addon text-dark"><i
@@ -190,7 +208,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-secondary" data-dismiss="modal" type="button" > Close</button>
+                <button class="btn btn-secondary" data-dismiss="modal" type="button"> Close</button>
                 <button class="btn btn-primary" type="button" id="save-job-btn"> Save Job</button>
             </div>
         </div>
@@ -228,7 +246,8 @@
                             <div class="input-group">
                                 <span class="input-group-addon text-dark"><i
                                         class="ion-ios-calendar-outline"></i></span>
-                                <input class="single-date-picker form-control" type="text" placeholder="Select group cut-off date"
+                                <input class="single-date-picker form-control" type="text"
+                                       placeholder="Select group cut-off date"
                                        id="group_cut_off_date">
                             </div>
                         </div>
@@ -375,7 +394,7 @@
                 </li>
                 <li id="add_data_list" hidden>
                     <a href="add_data.html">
-                        <span class="title" >Add Data</span>
+                        <span class="title">Add Data</span>
                     </a>
                 </li>
                 <li id="statistics_list" hidden>
@@ -390,7 +409,8 @@
 
 
                 </li>
-                <input placeholder="Search Table..." id="search_datatable" style="float: right; height: 35px;margin: 5px;">
+                <input placeholder="Search Table..." id="search_datatable"
+                       style="float: right; height: 35px;margin: 5px;">
 
             </ul>
         </div>
@@ -425,11 +445,11 @@
 
 
     </div>
-    <footer >
+    <footer>
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#">  PARIS ANANIA.</a> All rights reserved.
+            <a href="#"> PARIS ANANIA.</a> All rights reserved.
         </div>
         <!-- Copyright -->
 
@@ -479,7 +499,8 @@
 <script type="text/javascript" src="../assets/plugins/ckEditor/ckeditor.js"></script>
 <!--Data-Table JS-->
 <script type="text/javascript" src="../assets/plugins/data-tables/datatables.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/fixedheader/3.1.7/js/dataTables.fixedHeader.min.js"></script>
+<script type="text/javascript"
+        src="https://cdn.datatables.net/fixedheader/3.1.7/js/dataTables.fixedHeader.min.js"></script>
 
 <!--Editable JS-->
 <script type="text/javascript" src="../assets/plugins/editable/editable.js"></script>
@@ -506,10 +527,6 @@
     const {ipcRenderer} = electron;
 
     let myTransfers = new TransfersClass();
-
-
-
-
 
 
 </script>
