Done individuals are done

--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -108,6 +108,12 @@
                                 <span class="title">Done</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="deleted_individuals.html" id="deleted-ind" hidden>
+                                <span class="icon-thumbnail"><i class="dripicons-cross"></i></span>
+                                <span class="title">Deleted</span>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li>
