Persnonnel Page Added

--- a/pages/deleted_personnel.html
+++ b/pages/deleted_personnel.html
@@ -69,36 +69,6 @@
 </head>
 <body class="top-navigation">
 
-<!-- Start Notes modal -->
-<div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%"
-     id="notes-modal">
-    <div id="edit-notes-modal-header" class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
-                <h5 class="modal-title">Edit notes</h5>
-                <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
-
-            </div>
-            <div class="modal-body">
-                <div class="form-group col-sm-12" style="display: none">
-
-                    <input class="form-control" id="done_ind_id">
-                </div>
-                <div class="form-group col-sm-12">
-                    <label>Notes</label>
-                    <textarea class="form-control" rows="3" id="notes"></textarea>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" data-dismiss="modal" type="button"> Close</button>
-                <button class="btn btn-primary" type="button" id="save-notes"> Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Start Notes modal -->
-
 <nav class="fixed-header">
 
     <div class="navigation-header">
@@ -144,7 +114,7 @@
 
                 <li>
 
-                    <a href="javascript:void(0);" class="have-submenu active">
+                    <a href="javascript:void(0);" class="have-submenu">
                         <span class="icon-thumbnail"><i class="dripicons-align-center"></i></span>
                         <span class="title">Individuals</span>
                     </a>
@@ -192,7 +162,7 @@
                 </li>
                 <li>
 
-                    <a href="javascript:void(0);" class="have-submenu">
+                    <a href="javascript:void(0);" class="have-submenu active">
                         <span class="icon-thumbnail"><i class="dripicons-user-group"></i></span>
                         <span class="title">Personnel</span>
                     </a>
@@ -255,7 +225,7 @@
                         <div class="block bg-trans table-block mb-4">
                             <div class="row">
                                 <div class="table-responsive">
-                                    <table id="deleted_individuals_table" class="display table table-striped"
+                                    <table id="deleted_personnel_table" class="display table table-striped"
                                            style="width: 100%">
                                     </table>
                                 </div>
