--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -166,7 +166,7 @@
                 </li>
                 <li id="add_data_list" hidden>
                     <a href="add_data.html" class="active">
-                        <span class="title" >Add Data</span>
+                        <span class="title">MANAGE DATA</span>
                     </a>
                 </li>
                 <li id="statistics_list" hidden>
@@ -174,7 +174,6 @@
                         <span class="title">OVERVIEW</span>
                     </a>
                 </li>
-
 
 
             </ul>
@@ -188,28 +187,91 @@
         <div class="content sm-gutter">
 
             <div class="container-fluid">
-                <div class="col-12">
-                    <div class="section-title">
-                        <h4>Add Data</h4>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="section-title">
+                            <h4>Manage Data</h4>
+                        </div>
                     </div>
+
                 </div>
-                <div class="col-12">
-                    <label>Data Type</label>
-                    <select class="form-control select" id="data-type-select"
-                            data-placeholder="Choose data type.." tabindex="1">
-                        <option></option>
-                        <option value="city">City</option>
-                        <option id="vessel-option" value="vessel" style="display: none">Vessel</option>
-                    </select>
-                </div><br>
-                <div class="col-12">
-                    <label>Data Value</label>
-                    <input class="form-control" placeholder="Data value" id="data-value">
+                <div class="row">
+
+                    <div class="col-md-6">
+                        <div class="block form-block mb-4">
+                            <div class="block-heading">
+                                <h5>Add Data</h5>
+                            </div>
+                            <div class="col-md-12">
+                                <label>Data Type</label>
+                                <select class="form-control select" id="data-type-select"
+                                        data-placeholder="Choose data type.." tabindex="1">
+                                    <option></option>
+                                    <option value="city">City</option>
+                                    <option id="vessel-option" value="vessel" style="display: none">Vessel</option>
+                                </select>
+                            </div>
+                            <br/>
+                            <div class="col-md-12">
+                                <label>Data Value</label>
+                                <input class="form-control" placeholder="Data value" id="data-value">
+                            </div>
+                            <br/>
+                            <div class="col-12">
+                                <button id="add-new-data" class="btn btn-success" type="button"
+                                        style="width: 100%">Add Data
+                                </button>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-md-6">
+                        <div class="block form-block mb-4">
+                            <div class="block-heading">
+                                <h5>Delete Data</h5>
+                            </div>
+                            <div class="col-md-12">
+                                <label>Data Type</label>
+                                <select class="form-control select" id="del-data-type-select"
+                                        data-placeholder="Choose data type.." tabindex="1">
+                                    <option></option>
+                                    <option value="del-city">City</option>
+                                    <option value="del-vessel">Vessel</option>
+                                </select>
+                            </div>
+                            <br/>
+                            <div class="col-md-12" style="display: none" id="del-vessel-div">
+                                <label>Vessels List</label>
+                                <select class="form-control select" id="del-vessel-select"
+                                        data-placeholder="Choose vessel.." tabindex="1">
+                                    <option></option>
+                                    <option value="city">City</option>
+
+                                </select>
+                            </div>
+                            <br/>
+                            <div class="col-md-12" style="display: none" id="del-city-div">
+                                <label>Cities List</label>
+                                <select class="form-control select" id="del-city-select"
+                                        data-placeholder="Choose city.." tabindex="1">
+                                    <option></option>
+                                    <option value="city">City</option>
+                                </select>
+                            </div>
+                            <br/>
+                            <div class="col-12">
+                                <button id="delete-data" class="btn btn-danger" type="button"
+                                        style="width: 100%">Delete Data
+                                </button>
+                            </div>
+                        </div>
+
+                    </div>
+
+
                 </div>
-                <br>
-                <div class="col-12">
-                <button id="add-new-data" class="btn btn-success" type="button" style="width: 80%; margin-left: 10%">Add Data</button>
-                </div>
+
+
 
             </div>
         </div>
@@ -218,7 +280,7 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#">  PARIS ANANIA.</a> All rights reserved.
+            <a href="#"> PARIS ANANIA.</a> All rights reserved.
         </div>
         <!-- Copyright -->
 
