--- a/pages/done_individuals.html
+++ b/pages/done_individuals.html
@@ -111,7 +111,14 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label> Department</label>
+                            <input class="form-control" placeholder="Department" id="department"
+                                   disabled>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
                         <div class="form-group">
                             <label> Individual cost €</label>
                             <input class="form-control" placeholder="Job estimate cost €" id="job_estimate_costs"
