--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -153,20 +153,20 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="form-group">
-                                <label> Forwarder*</label>
+                                <label> Forwarder</label>
                                 <input class="form-control" placeholder="Type forwarder data..." id="forwarder">
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="form-group">
-                                <label> Estimate cost (€)*</label>
+                                <label> Estimate cost (€)</label>
                                 <input type="number" class="form-control" placeholder="Type estimate cost (€)..."
                                        id="estimate_cost">
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="form-group">
-                                <label> KG*</label>
+                                <label> KG</label>
                                 <input type="number" class="form-control" placeholder="Type Kilos..." id="kg">
                             </div>
                         </div>
@@ -178,7 +178,7 @@
 
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <label> Reference*</label>
+                                <label> Reference</label>
                                 <input class="form-control" placeholder="Type reference number..." id="reference"
                                        type="text">
                             </div>
@@ -228,7 +228,14 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label> Department </label>
+                            <input class="form-control" placeholder="Department" id="department"
+                                   disabled>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
                         <div class="form-group">
                             <label> Individual cost €</label>
                             <input class="form-control" placeholder="Job estimate cost" id="job_estimate_costs"
@@ -425,7 +432,7 @@
                 </li>
                 <li id="add_data_list" hidden>
                     <a href="add_data.html">
-                        <span class="title">Add Data</span>
+                        <span class="title">MANAGE DATA</span>
                     </a>
                 </li>
                 <li id="statistics_list" hidden>
