--- a/pages/personnel.html
+++ b/pages/personnel.html
@@ -431,7 +431,7 @@
                 </li>
                 <li id="add_data_list" hidden>
                     <a href="add_data.html">
-                        <span class="title">Add Data</span>
+                        <span class="title">MANAGE DATA</span>
                     </a>
                 </li>
                 <li id="statistics_list" hidden>
