--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -240,22 +240,19 @@
                                 </select>
                             </div>
                             <br/>
-                            <div class="col-md-12" style="display: none" id="del-vessel-div">
+                            <div class="col-md-12" id="del-vessel-div">
                                 <label>Vessels List</label>
                                 <select class="form-control select" id="del-vessel-select"
                                         data-placeholder="Choose vessel.." tabindex="1">
                                     <option></option>
-                                    <option value="city">City</option>
-
                                 </select>
                             </div>
                             <br/>
-                            <div class="col-md-12" style="display: none" id="del-city-div">
+                            <div class="col-md-12" id="del-city-div">
                                 <label>Cities List</label>
                                 <select class="form-control select" id="del-city-select"
                                         data-placeholder="Choose city.." tabindex="1">
                                     <option></option>
-                                    <option value="city">City</option>
                                 </select>
                             </div>
                             <br/>
@@ -345,6 +342,7 @@
     const {ipcRenderer} = electron;
 
     let addData = new addDataClass();
+
 
 </script>
 
