--- a/pages/done_consolidations.html
+++ b/pages/done_consolidations.html
@@ -271,7 +271,7 @@
                 </li>
                 <li id="add_data_list" hidden>
                     <a href="add_data.html">
-                        <span class="title" >Add Data</span>
+                        <span class="title" >Manage Data</span>
                     </a>
                 </li>
                 <li id="statistics_list" hidden>
