Estimate cost changes

--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -174,8 +174,9 @@
                         <span class="title">OVERVIEW</span>
                     </a>
                 </li>
-
-
+                <li id="actions_list">
+                    <button class="btn btn-danger mt-2" onclick="window.location.reload()">REFRESH</button>
+                </li>
             </ul>
         </div>
     </nav>
@@ -193,10 +194,8 @@
                             <h4>Manage Data</h4>
                         </div>
                     </div>
-
                 </div>
                 <div class="row">
-
                     <div class="col-md-6">
                         <div class="block form-block mb-4">
                             <div class="block-heading">
