--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -247,7 +247,7 @@
                 <div id="group-cost-div">
                     <div class="row">
                         <div class="form-group col-sm-6">
-                            <label>Group Cut Off Date*</label>
+                            <label>Group deadline*</label>
                             <div class="input-group">
                                 <span class="input-group-addon text-dark"><i
                                         class="ion-ios-calendar-outline"></i></span>
