--- a/pages/personnel.html
+++ b/pages/personnel.html
@@ -126,18 +126,20 @@
                                     <option value="Road">Road</option>
                                     <option value="Sea">Sea</option>
                                 </select>
-                                <a id="add-city-btn" href="#"><i class="fa fa-plus-square"></i></a>
+
 
                             </div>
                         </div>
                         <div class="col-sm-4" id="ex-input-div">
                             <div class="form-group">
                                 <label> Ex*</label>
+                                <a id="add-city-btn" href="#"><i class="fa fa-plus-square"></i></a>
+                                <a id="refresh-city-btn" href="#"><i class="fa fa-refresh"></i></a>git
                                 <select class="form-control select" id="ex-input"
                                         data-placeholder="Choose city..."
                                         tabindex="1">
                                 </select>
-                                <a id="refresh-city-btn" href="#"><i class="fa fa-refresh"></i></a>
+
                             </div>
                         </div>
                         <div class="col-sm-4" id="to-input-div">
