Last changes before TBA

--- a/pages/deleted_individuals.html
+++ b/pages/deleted_individuals.html
@@ -230,6 +230,7 @@
                 <li id="actions_list">
 
                     <button class="btn btn-danger mt-2" onclick="window.location.reload()">REFRESH</button>
+                    <button id="empty-trashcan" class="btn btn-success mt-2">EMPTY TRASHCAN</button>
 
 
                 </li>
