--- a/pages/personnel.html
+++ b/pages/personnel.html
@@ -134,7 +134,7 @@
                             <div class="form-group">
                                 <label> Ex*</label>
                                 <a id="add-city-btn" href="#"><i class="fa fa-plus-square"></i></a>
-                                <a id="refresh-city-btn" href="#"><i class="fa fa-refresh"></i></a>git
+                                <a id="refresh-city-btn" href="#"><i class="fa fa-refresh"></i></a>
                                 <select class="form-control select" id="ex-input"
                                         data-placeholder="Choose city..."
                                         tabindex="1">
