Changes for TBA

--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -187,6 +187,7 @@
                         </div>
                         <div class="form-group col-sm-6">
                             <label>Deadline*</label>
+                            <a id="remove-date" href="#"><i class="fa fa-calendar-minus-o"></i></a>
                             <div class="input-group">
                                 <span class="input-group-addon text-dark"><i
                                         class="ion-ios-calendar-outline"></i></span>
@@ -277,6 +278,26 @@
                             <div class="form-group">
                                 <label> Group Cost*</label>
                                 <input class="form-control" placeholder="Group cost" id="group_cost">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label> Group Ex*</label>
+                                <select class="form-control select" id="group-ex-select"
+                                        data-placeholder="Choose city..."
+                                        tabindex="1">
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label> Group To*</label>
+                                <select class="form-control select" id="group-to-select"
+                                        data-placeholder="Choose city..."
+                                        tabindex="1">
+                                </select>
                             </div>
                         </div>
                     </div>
