on the fly changes

--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -123,6 +123,7 @@
                                     <option value="Courier">Courier</option>
                                     <option value="Road">Road</option>
                                     <option value="Sea">Sea</option>
+                                    <option value="Personnel">Personnel</option>
                                 </select>
 
 
@@ -255,7 +256,7 @@
                                 <span class="input-group-addon text-dark"><i
                                         class="ion-ios-calendar-outline"></i></span>
                                 <input class="single-date-picker form-control" type="text"
-                                       placeholder="Select group cut-off date"
+                                       placeholder="Select group deadline"
                                        id="group_cut_off_date">
                             </div>
                         </div>
