--- a/pages/personnel.html
+++ b/pages/personnel.html
@@ -253,7 +253,7 @@
                                 <span class="input-group-addon text-dark"><i
                                         class="ion-ios-calendar-outline"></i></span>
                                 <input class="single-date-picker form-control" type="text"
-                                       placeholder="Select group cut-off date"
+                                       placeholder="Select group deadline"
                                        id="group_cut_off_date">
                             </div>
                         </div>
