Last individual changes

--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -241,7 +241,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label> Individual cost €</label>
+                            <label> Estimate Cost €</label>
                             <input class="form-control" placeholder="Job estimate cost" id="job_estimate_costs"
                                    disabled>
                         </div>
@@ -262,7 +262,7 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <label> Group Forwarder*</label>
+                                <label> Group Forwarder</label>
                                 <input class="form-control" placeholder="Group forwarder" id="group_forwarder">
                             </div>
                         </div>
@@ -277,8 +277,8 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <label> Group Cost*</label>
-                                <input class="form-control" placeholder="Group cost" id="group_cost">
+                                <label> Group Cost</label>
+                                <input class="form-control" placeholder="Type group cost..." id="group_cost">
                             </div>
                         </div>
                     </div>
